--- a/public/assets/stylesheets/less/theme.less
+++ b/public/assets/stylesheets/less/theme.less
@@ -34,12 +34,20 @@ h1{color: @general-white-color;}
 	background-color: @general-red-color;
 	border-color: #fff;
 	border-top: 0px;
+	min-height: 30px;
 }
 
 .navigation-bar-juzi .nav > li > a{
 	font-size: 14px;
 	color: #fff;
 	text-shadow: none;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+.navigation-bar-juzi .nav > li > a:hover, .navigation-bar-juzi .nav > li > a:focus{
+    background-color: @general-light-red-color;
+    color: #fff;
+    text-shadow:none;
 }
 
 /*** theme for different type of boxes **/
