--- a/public/assets/stylesheets/less/module.less
+++ b/public/assets/stylesheets/less/module.less
@@ -1,10 +1,14 @@
 @default-padding: 10px;
 @default-margin: 10px;
+/** the basic module **/
+.module{margin-bottom: @default-margin;}
+
 /** login module **/
 .register-box{margin: @default-margin 0px; padding: @default-padding;}
 .register-box a{display:block; width: 100%;}
 .mini-login{margin: @default-margin;}
 .mini-login .mini-form{margin: 0px;}
+.m
 
 /** full screen module **/
 .full-screen-module{margin-bottom: 10px;}
@@ -24,7 +28,6 @@
 .question-module ul {margin: 0px; padding: 0px ;}
 .question-module ul li a{ padding: 10px 0px; }
 .question-info {margin-bottom: 10px; color: @general-red-color;}
-
 
 /** question side module **/
  .question-number{margin-left: 10px;}
