--- a/public/assets/stylesheets/less/base.less
+++ b/public/assets/stylesheets/less/base.less
@@ -7,3 +7,10 @@ font-family: tahoma, arial, sans-serif;
 }
 
 ul{list-style:none;}
+a {
+   outline: 0;
+}
+a:hover{text-decoration:none; outline:0;};
+input::-moz-focus-inner { 
+  border: 0; 
+}
