udpate the module less

--- a/public/assets/stylesheets/less/module.less
+++ b/public/assets/stylesheets/less/module.less
@@ -1,5 +1,19 @@
 @default-padding: 10px;
 @default-margin: 10px;
+@general-red-color: #EF7360;
+@general-light-red-color: #DFB5B4;
+@general-light-grey-color: #E8EDF1;
+@general-dark-grey-color: #E6E6E6;
+@general-white-color: #FFF;
+@general-text-color: #666;
+@general-description-color: #999;
+@general-placeholder-color: #ccc;
+@general-green-color: #3BA354; 
+@general-blue-color: #3377AA;
+
+
+//background
+@general-background-color: #E8EDF1;
 /** the basic module **/
 .module{margin-bottom: @default-margin;}
 
