--- a/public/assets/stylesheets/less/base.less
+++ b/public/assets/stylesheets/less/base.less
@@ -8,7 +8,7 @@ font-family: tahoma, arial, sans-serif;
 
 ul{list-style:none;}
 a {
-   outline: 0;
+   outline: none;
 }
 a:hover{text-decoration:none; outline:0;};
 input::-moz-focus-inner { 
