--- a/public/assets/stylesheets/less/base.less
+++ b/public/assets/stylesheets/less/base.less
@@ -7,9 +7,11 @@ font-family: tahoma, arial, sans-serif;
 }
 
 ul{list-style:none;}
-a {
+
+ul li a, a, a:link, a:visited, a:hover, a:active {
    outline: none;
 }
+
 a:hover{text-decoration:none; outline:0;};
 input::-moz-focus-inner { 
   border: 0; 
